<resources>
    <string name="app_name">BhoomiCam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="map_key" translatable="false">AIzaSyBBrK3v8TdZ9TI4pTOGe47_Y82nb8ZqZjs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="complete">Complete</string>
    <string name="current_gps_location">current GPS location</string>
    <string name="register_your_crop">Register your crop</string>
    <string name="select_season">Select season</string>
    <string name="rabi">Rabi</string>
    <string name="type_of_crops">Type of crops</string>
    <string name="your_field_size_m_x_m">Your field size(M x M)</string>
    <string name="enter_your_field_size">Enter your field size</string>
    <string name="select_your_crop_growth_stage">Select your crop growth stage</string>
    <string name="good">Good</string>
    <string name="select_harvesting_date">Select harvesting date</string>
    <string name="submit">submit</string>
    <string name="take_picture_of_your_field">Take picture of your field</string>
    <string name="select_cutting_date">Select cutting date</string>
    <string name="select_condition_of_your_soil">Select condition of your soil</string>
    <string name="percentage_on_ground">Percentage On Ground</string>
    <string name="select_percentage_of_crop_on_ground">Select percentage of crop on ground</string>
    <string name="health">Health</string>
    <string name="select_your_crop_health_condition">Select your crop Health condition</string>
    <string name="growth_state">Growth State</string>
    <string name="confirm">confirm</string>
    <string name="book">Book</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_lorem_ipsu_m_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsu_m_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. Lorem Ipsu m is simply dummy text of the printing and typesetting industry. Lorem Ipsu m is simply dummy text of the printing and typesetting industry.</string>
    <string name="textview">TextView</string>
    <string name="choose_mode_of_payment">Choose Mode Of Payment</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="via_upi_netbanking">VIA UPI / NETBANKING</string>
    <string name="create_password">Create Password</string>
    <string name="crop_analysis">Crop Analysis</string>
    <string name="enter_your_field_size_m_x_n">Enter your field size(m x n)</string>
    <string name="enter_field_size">Enter field size</string>
    <string name="take_picture_of_crop">Take Picture Of Crop</string>
    <string name="type_of_crop">Type of Crop</string>
    <string name="latitude_longitude_elevation">Latitude , Longitude , Elevation</string>
    <string name="drone_services">Drone Services</string>
    <string name="drone_services_booking">Drone Services - Booking</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="area_of_land">Area Of Land</string>
    <string name="date_for_delievery">Date for delievery</string>
    <string name="_8226_payment_for_the_respective_service_will_be_done_after_the_completion_of_the_booked_task_n_8226_you_can_choose_upi_cash_on_delivery_cod_net_banking_for_the_payment">• Payment for the respective Service will be done after the completion of the booked task.\n•You can choose UPI/Cash on delivery( COD )/Net banking for the payment.</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="enter_aadhar_number">Enter Aadhar Number</string>
    <string name="enter_khasra_number">Enter Khasra Number</string>
    <string name="khasra_number">Khasra Number</string>
    <string name="aadhar_card_number">Aadhar Card Number</string>
    <string name="enter_state">Enter State</string>
    <string name="state">State</string>
    <string name="enter_village">Enter Village</string>
    <string name="village">Village</string>
    <string name="address">Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="check_bhoomi_score">Check Bhoomi Score</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_up">Sign-Up</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login">Login</string>
    <string name="send_otp">Send OTP</string>
    <string name="register_yourself">Register yourself</string>
    <string name="district">District</string>
    <string name="enter_your_district">Enter your district</string>
    <string name="enter_your_village">Enter your village</string>
    <string name="enter_your_state">Enter your state</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="adhar_card_number">Adhar card number</string>
    <string name="enter_your_adhar_card_number">Enter your Adhar card number</string>
    <string name="kharsra_number">Kharsra number</string>
    <string name="enter_your_khasra_number">Enter your khasra number</string>
    <string name="next">next</string>
    <string name="order_no">Order No :</string>
    <string name="amount">Amount :</string>
    <string name="date_and_time_of_delivery">Date and Time of Delivery :</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="booked">Booked</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="didn_t_have_account">Didn\'t have account?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="drone">Try Our Drone Services</string>
    <string name="see_all_your_orders">See all your Orders</string>
    <string name="crop_analysi">Crop Analysis</string>
    <string name="register">Register Yourself</string>
    <string name="check_you">Check out our drone services</string>
    <string name="see_all">See all your orders</string>
    <string name="check_your">Check on your crop growth</string>
    <string name="re">Register yourself for updates</string>
</resources>